src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__switch_case_invalid_case_conditions.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error[E079]: Invalid case condition!
   ┌─ <internal>:11:17
   │
11 │                 foo():
   │                 ^^^^^^ Invalid case condition!

error[E080]: Cannot resolve constant: CallStatement {
    operator: ReferenceExpr {
        kind: Member(
            Identifier {
                name: "foo",
            },
        ),
        base: None,
    },
    parameters: None,
}. Non constant variables are not supported in case conditions
   ┌─ <internal>:11:17
   │
11 │                 foo():
   │                 ^^^^^^ Cannot resolve constant: CallStatement {
    operator: ReferenceExpr {
        kind: Member(
            Identifier {
                name: "foo",
            },
        ),
        base: None,
    },
    parameters: None,
}. Non constant variables are not supported in case conditions

error[E079]: Invalid case condition!
   ┌─ <internal>:13:17
   │
13 │                 res := 2:
   │                 ^^^^^^^^ Invalid case condition!


